styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.translate-z-0 {
  transform: translateZ(0px);
}
.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
.swiper-pagination-horizontal.swiper-pagination-bullets
  .swiper-pagination-bullet {
  background-color: #5bc0be;
}

.swiper-button-next:after,
.swiper-button-prev:after,
.swiper-button-next:after,
.swiper-rtl .swiper-button-prev:after {
  color: #5bc0be;
}

@layer base {
  body {
    @apply bg-secondary overflow-x-hidden overflow-y-auto leading-relaxed;
  }
  .page {
    @apply w-full min-h-screen h-auto overflow-y-auto;
  }
  .h1 {
    @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.3] mb-8 font-semibold;
  }
  .h2 {
    @apply text-[35px] leading-tight md:text-[54px] md:leading-[1.3] mb-4 font-semibold;
  }
  p {
    @apply leading-[1.8] text-white/60 font-light;
  }
  .btn,
  .input {
    @apply h-[52px];
  }
  .input {
    @apply w-full h-[52px] rounded-lg pl-6;
  }
  .input,
  .textarea {
    @apply bg-transparent outline-none focus:ring-1 focus:ring-accent border border-white/20 placeholder:text-white/30 placeholder:font-light;
  }
  .textarea {
    @apply w-full h-[180px] p-6 rounded-lg resize-none;
  }
}

/* Keep smooth scrolling on touch devices. */
@media (hover: none) and (pointer: coarse) {
  .page {
    -webkit-overflow-scrolling: touch;
  }
}

